test/semantic_error/se_rd_arr.c0
int a[1];

int main() {
    scanf(a);
}
